feat: update gallery layout and fix background issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -28,6 +28,7 @@ body {
     rgb(var(--background-start-rgb)),
     rgb(var(--background-end-rgb))
   );
+  background-attachment: fixed;
   display: flex;
   flex-direction: column;
 }
